--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="csrf-token" content="{{csrfToken}}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Best Website</title>
   <meta name="HandheldFriendly" content="True" />
