--- a/views/partials/side-nav.hbs
+++ b/views/partials/side-nav.hbs
@@ -1,8 +1,8 @@
-<div id="side-bar" class="bg-black text-white w-20 border-grey-l " >
+<div id="side-bar" class="bg-black text-white w-10 border-grey-l " >
     
     <main>
         <!-- links list-->
-        <div >
+        <div class="border-grey-b pb-4" >
             <ul class="list-group border-0">
                 <li class="list-group-item border-0 text-center">
                     <a title="home page" class="text-green f-rem-2 side-nav-link" href="/">
@@ -30,12 +30,7 @@
             </ul>
         </div>
         <!-- end links list-->
-
-        <!-- small about me -->     
-        <article class="mt-4 text-center"> Recipeprog is a web app to help those who want learn to cook,
-            its a place where you can track your progress and share recipes with others</article>
-        <!-- end small about me -->
-
+        
         <!-- what people saying about us -->
         <div></div>
         <!-- what people saying about us --> 
