--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,10 +8,25 @@
     width: 20vw;
     max-width: 20vw;
 }
+.w-10{
+    width: 10%;
+    max-width: 10vw;
+}
+
+.w-5{
+    width: 5vw;
+    max-width: 5vw;
+}
+
 .w-80{
     width: 80vw;
     max-width: 100vw;
     min-width: 80vw;
+}
+
+.w-90{
+    width: 90vw;
+    min-width: 90vw;
 }
 .wv-100{
     width:100%;
